--- a/page.html
+++ b/page.html
@@ -33,7 +33,7 @@
             var bgImage; // Variable para almacenar la imagen de fondo
 
             function preload() {
-                bgImage = loadImage('image/background.jpg'); // Cargar la imagen de fondo
+                bgImage = loadImage('background.jpg');
             }
             function setup() {
                 createCanvas(windowWidth, windowHeight);
